--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aquí vamos a hacer un blog post</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+        <h1>Titulo interesante</h1>
+        <p>efrgetrhydtgef</p>
+        </div>
+    </div>
 </body>
 </html>
