--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            cabecera
+        </div>
         <div id="post">
         <h1>Titulo interesante</h1>
         <p>efrgetrhydtgef</p>
