Modifique la cabecera y el color del texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
     <div id="container">
         <div id="cabecera">
             cabecera
+            <span id="tagline">Es mi blog de cabecera</span>
         </div>
         <div id="post">
         <h1>Titulo interesante</h1>
