--- a/blogpost.html
+++ b/blogpost.html
@@ -8,10 +8,13 @@
     <div id="container">
         <div id="cabecera">
             cabecera
+            <span id="tagline">tu blog de 
+            master</span>
         </div>
         <div id="post">
         <h1>Titulo interesante</h1>
         <p>efrgetrhydtgef</p>
+        <p>Suscribe</p>
         </div>
     </div>
 </body>
