--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hola, estoy iniciando</title>
+    <title>Hola, estoy iniciando con esto de la programacion</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
