--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         </div>
         <div id="post">
         <h1>Titulo interesante</h1>
-        <p>efrgetrhydtgef</p>
+        <p>pensare en que poner aqui</p>
         <p>Suscribe</p>
         </div>
     </div>
