--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
         <div id="post">
         <h1>Titulo interesante</h1>
         <p>pensare en que poner aqui</p>
-        <p>Suscribe</p>
+        <p>ya vere</p>
         </div>
     </div>
 </body>
