puse etiqueta header

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,29 @@
 </head>
 <body>
     <div id="container">
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a>Sobre mi</a>
+                    </li>
+                    <li>
+                        <a>Posts</a>
+                    </li>
+                    <li>
+                        <a>Trabajando para internet</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <h1>Estoy aprendiendo esto de desarrollo, <br>que verguenza ver esto en el futuro <br>jaja</h1>
+        </section>
+        <section>Principal</section>
+        <section>posts</section>
+        <section>eventos</section>
+        <section>contactos</section>
+
         <div id="cabecera">
             cabecera
             <span id="tagline">Es mi blog de cabecera</span>
